# everynoise-api

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: routes.py  scrap.py
tests/: test_routes.py
