[tool.poetry]
name = "everynoise_api"
version = "0.1.0"
description = ""
authors = ["daviirodrig <30713947+daviirodrig@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"
requests = "^2.26.0"
beautifulsoup4 = "^4.10.0"
lxml = "^4.6.4"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.10b0"
pylint = "^2.13.8"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
